test/errors/offsets_error/zs/logical_and_operator_error.zs
package logical_and_operator_error;

struct LogicalAndOperatorError
{
    bool offset;
offset && true:
    string field;
};
